// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error state > errors put every widget into its error state 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="fui-Card rfxo2k2 ___gzh15e0_1fl63g0 f1vx9l62 f14k419y f1fgo9fz fvqmfsm f3am6yf f1r5wgso frsmuga fuldkky f1eon7jj f1couhl3 f1e4n9qa fmr10b5 f7ew8k6 f1prrymk ftqa4ok f2hkw1w f8hki3x f1d2448m f1bjia2o ffh67wi f1j6vpng f1pniga2 f987i1v f1ffjurs f15bsgw9 f14e48fq f18yb2kv fd6o370 fpqizxz fnd8nzh f15fr7a0 fwsq40z f34ld9f fy0y4wt fbxl46w"
      role="group"
    >
      <h6
        class="fui-Text ___1xx6xg1_itqd0o0 fk6fouc fod5ikn faaz57k figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1hu3pq6 f19f4twv"
      >
        Errors
      </h6>
      <ul>
        <li>
          .marketType must be equal to one of the allowed values
        </li>
        <li>
          .commissioning must match format "year"
        </li>
        <li>
          .regions must NOT have fewer than 1 items
        </li>
        <li>
          .tier must be equal to one of the allowed values
        </li>
        <li>
          .active must be checked
        </li>
        <li>
          .notes must NOT have more than 10 characters
        </li>
        <li>
          .quantity must be an integer
        </li>
        <li>
          .threshold must be &lt;= 10
        </li>
        <li>
          .secret must NOT have fewer than 8 characters
        </li>
        <li>
          .shade must match format "color"
        </li>
        <li>
          .startsOn must match format "date"
        </li>
        <li>
          .startsAt must match format "date-time"
        </li>
        <li>
          .opensAt must match format "time"
        </li>
        <li>
          .endsOn must match format "date"
        </li>
        <li>
          .attachment must match format "data-url"
        </li>
      </ul>
    </div>
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <div
          class="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
        >
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <div
                  class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                >
                  <label
                    class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                    for="field-_r_2___control"
                    id="field-_r_2___label"
                  >
                    marketType
                  </label>
                  <div
                    class="fui-Dropdown form-control ___1emhu78_1oaig15 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                  >
                    <button
                      aria-describedby="root_marketType__error root_marketType__description root_marketType__help"
                      aria-expanded="false"
                      aria-invalid="true"
                      aria-labelledby="field-_r_2___label"
                      class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                      id="root_marketType"
                      name="root_marketType"
                      role="combobox"
                      tabindex="0"
                      type="button"
                      value=""
                    >
                      <span
                        class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                      >
                        <svg
                          aria-hidden="true"
                          class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      aria-label="Clear selection"
                      class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_marketType__error"
                    >
                      must be equal to one of the allowed values
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_commissioning"
                >
                  commissioning
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_commissioning__error root_commissioning__description root_commissioning__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_commissioning"
                    name="root_commissioning"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_commissioning__error"
                    >
                      must match format "year"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="rjsf-field rjsf-field-array rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_regions"
                >
                  regions
                </label>
                <div
                  class="fui-Flex ___1ccp5kb_1s932w9 f22iagw f1vx9l62"
                >
                  <span
                    class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                  >
                    <input
                      aria-describedby="root_regions__error root_regions__description root_regions__help"
                      aria-invalid="true"
                      class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                      id="root_regions-0"
                      name="root_regions"
                      type="checkbox"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Checkbox__indicator rl7ci6d"
                    />
                    <label
                      class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_regions-0"
                    >
                      north
                    </label>
                  </span>
                  <span
                    class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                  >
                    <input
                      aria-describedby="root_regions__error root_regions__description root_regions__help"
                      aria-invalid="true"
                      class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                      id="root_regions-1"
                      name="root_regions"
                      type="checkbox"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Checkbox__indicator rl7ci6d"
                    />
                    <label
                      class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_regions-1"
                    >
                      south
                    </label>
                  </span>
                </div>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_regions__error"
                    >
                      must NOT have fewer than 1 items
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_tier"
                >
                  tier
                </label>
                <div
                  aria-describedby="root_tier__error root_tier__description root_tier__help"
                  aria-invalid="true"
                  class="fui-RadioGroup ___1tjgnp0_1mgmpxf f22iagw f6jr5hl f1vx9l62"
                  id="root_tier"
                  role="radiogroup"
                >
                  <span
                    class="fui-Radio r1siqwd8"
                  >
                    <input
                      aria-describedby="root_tier__error root_tier__description root_tier__help"
                      class="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
                      id="root_tier-0"
                      name="root_tier"
                      type="radio"
                      value="0"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Radio__indicator rwtekvw"
                    />
                    <label
                      class="fui-Label fui-Radio__label ___pfgtpr0_5m9p670 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_tier-0"
                    >
                      gold
                    </label>
                  </span>
                  <span
                    class="fui-Radio r1siqwd8"
                  >
                    <input
                      aria-describedby="root_tier__error root_tier__description root_tier__help"
                      class="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
                      id="root_tier-1"
                      name="root_tier"
                      type="radio"
                      value="1"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Radio__indicator rwtekvw"
                    />
                    <label
                      class="fui-Label fui-Radio__label ___pfgtpr0_5m9p670 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_tier-1"
                    >
                      silver
                    </label>
                  </span>
                </div>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_tier__error"
                    >
                      must be equal to one of the allowed values
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-boolean rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <span
                  class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                >
                  <input
                    aria-describedby="root_active__error root_active__description root_active__help"
                    aria-invalid="true"
                    class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                    id="root_active"
                    name="root_active"
                    type="checkbox"
                  />
                  <div
                    aria-hidden="true"
                    class="fui-Checkbox__indicator rl7ci6d"
                  />
                  <label
                    class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                    for="root_active"
                  >
                    active
                  </label>
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_active__error"
                    >
                      must be checked
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_notes"
                >
                  notes
                </label>
                <span
                  class="fui-Textarea ___1lfktbl_1ifc1cv ftuwxu6 f1ewtqcl f10pi13n f1yiegib f1s184ao ft85np5 f12kltsn fxugw4r f1c1zstj fhz96rm f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx fj2g8qd f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f1vnc8sk f3e99gv fhljsf7 f1l4zc64 f9mts5e f1z0osm6 f1acnei2 f1so894s f19ezbcq fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <textarea
                    aria-describedby="root_notes__error root_notes__description root_notes__help"
                    aria-invalid="true"
                    class="fui-Textarea__textarea ___1exmw6r_wmtmdb0 f1ern45e f1n71otn f1h8hb77 f1deefiw f1s184ao f3rmtva f1ewtqcl f19n0e5 fqerorx fk6fouc f1l02sjl fwyc1cq f13ta7ih f1s6fcnf fvmd9f f1ww82xo f1if7ixc fkhj508 figsok6 f1i3iumi f1o1s39h"
                    id="root_notes"
                    name="root_notes"
                    placeholder=""
                    rows="5"
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_notes__error"
                    >
                      must NOT have more than 10 characters
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-number rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_quantity"
                >
                  quantity
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_quantity__error root_quantity__description root_quantity__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_quantity"
                    name="root_quantity"
                    placeholder=""
                    step="any"
                    type="number"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_quantity__error"
                    >
                      must be an integer
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-number rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_threshold"
                >
                  threshold
                </label>
                <div
                  class="fui-Slider ___1rzzne9_mbaqyp0 f10pi13n fwk3njj f1sdsnyy f122n59 f1oiokrs ftqa4ok f2hkw1w f1b1k54r f4ne723 fh7aioi fqqcjud f1ufm4qn f1qnwcb4 fi52z01 fgrk5zm ffht0p2 f1p0ul1q f1c901ms f1alokd7 fmj8fco f1iwowo3 f1pffoy2 f1dfga45 fs6b7xr f63jj3o f1a78h9h fh1udnr fuok0yf f1nxs5xn fyvtabn fgfd48t f4t5rw1 f4l8x3l f671q34 fvfzmw5 faw1t00 fxdgx5 fii04fa f36hzz8 fdjsfay f1fen33d f1c6b0w1 f1rq9b4z f4xxiul"
                  style="--fui-Slider--direction: 90deg; --fui-Slider--progress: 0%;"
                >
                  <input
                    aria-describedby="root_threshold__error root_threshold__description root_threshold__help"
                    aria-invalid="true"
                    class="fui-Slider__input ___18m7y3e_m61uku0 f1k6fduh fk73vx1 f16hsg94 f1nzqi2z fwpfdsa fuur7zz f1mk8lai f1s184ao f1yfdkfd fly5x3f"
                    id="root_threshold"
                    max="10"
                    min="0"
                    name="root_threshold"
                    type="range"
                    value="0"
                  />
                  <div
                    class="fui-Slider__rail ___1t90fwv_uffdai0 f1kijzfu f1aehjj5 faunodf f88nxoq fd46tj4 f1e2fz10 f10pi13n fdgv6k0 fizngqt fpvhumw f1yog68k f13sgyd8 fzhtfnv f1j7ml58 fx36ao7 fddlh2i fly5x3f f1cy86ho f1heqfse fkh49vu f16tdq4e"
                  />
                  <div
                    class="fui-Slider__thumb ___1bqxrfv_t9dzsz0 ftx3jue faunodf f88nxoq fd46tj4 f1e2fz10 f1euv43f f174ca62 f1yfdkfd f1aehjj5 f1s6fcnf fdgv6k0 f44lkw9 fof7hq0 foksa45 f1j7ml58 f14u7mkt f5zrw40 fto0uou f1ks5ppg fielpny fyl8oag fzhtfnv f1fsco4d f13gfj74 foa2ioz"
                  />
                </div>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_threshold__error"
                    >
                      must be &lt;= 10
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_secret"
                >
                  secret
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_secret__error root_secret__description root_secret__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_secret"
                    name="root_secret"
                    placeholder=""
                    type="password"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_secret__error"
                    >
                      must NOT have fewer than 8 characters
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_shade"
                >
                  shade
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_shade__error root_shade__description root_shade__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_shade"
                    name="root_shade"
                    placeholder=""
                    type="color"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_shade__error"
                    >
                      must match format "color"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_startsOn"
                >
                  startsOn
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_startsOn__error root_startsOn__description root_startsOn__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_startsOn"
                    name="root_startsOn"
                    placeholder=""
                    type="date"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_startsOn__error"
                    >
                      must match format "date"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_startsAt"
                >
                  startsAt
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_startsAt__error root_startsAt__description root_startsAt__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_startsAt"
                    name="root_startsAt"
                    placeholder=""
                    type="datetime-local"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_startsAt__error"
                    >
                      must match format "date-time"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_opensAt"
                >
                  opensAt
                </label>
                <span
                  class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                >
                  <input
                    aria-describedby="root_opensAt__error root_opensAt__description root_opensAt__help"
                    aria-invalid="true"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_opensAt"
                    name="root_opensAt"
                    placeholder=""
                    type="time"
                    value=""
                  />
                </span>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_opensAt__error"
                    >
                      must match format "time"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <ul
                  class="list-inline"
                >
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_o___control"
                        id="field-_r_o___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_year__error root_endsOn_year__description root_endsOn_year__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_o___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_year"
                          name="root_endsOn_year"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_q___control"
                        id="field-_r_q___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_month__error root_endsOn_month__description root_endsOn_month__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_q___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_month"
                          name="root_endsOn_month"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_s___control"
                        id="field-_r_s___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_day__error root_endsOn_day__description root_endsOn_day__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_s___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_day"
                          name="root_endsOn_day"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <button
                      class="btn btn-info btn-now"
                      type="button"
                    >
                      Now
                    </button>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <button
                      class="btn btn-warning btn-clear"
                      type="button"
                    >
                      Clear
                    </button>
                  </li>
                </ul>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_endsOn__error"
                    >
                      must match format "date"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string rjsf-field-error"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <div>
                  <label
                    class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                    for="root_attachment"
                  >
                    attachment
                  </label>
                  <span
                    class="fui-Input r1oeeo9n ___3k9dro0_uo2dlw0 fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm fs4k3qj fcee079 f1fgmyf4 fmyw78r"
                  >
                    <input
                      aria-describedby="root_attachment__error root_attachment__description root_attachment__help"
                      aria-invalid="true"
                      class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                      id="root_attachment"
                      name="root_attachment"
                      placeholder=""
                      type="file"
                      value=""
                    />
                  </span>
                </div>
                <ul
                  class="___1f4kp4s_0000000 f1hu3pq6 f19f4twv f1cnd47f ftrb29c"
                >
                  <li
                    class="___hlfurj0_0000000 fhx4nu f1ywm7hm f14wxoun"
                  >
                    <small
                      class="___9491ub0_0000000 f1hcrxcs"
                      id="root_attachment__error"
                    >
                      must match format "data-url"
                    </small>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="___fko12g0_0000000 f1wswflg"
    >
      <button
        class="fui-Button r1f29ykk ___dhqv000_ql4wmo0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc f1ksv2xa fhvnf4x fb6swo4 f1klyf7k f232fm2 f1d6mv4x f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx f1ysmecq faulsx f79t15f fbtzoaq f8qmx7k fd4bjan f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`error state > ui:hideError on a parent keeps its children out of the error state 1`] = `
<DocumentFragment>
  <form
    class="rjsf"
  >
    <div
      class="fui-Card rfxo2k2 ___gzh15e0_1fl63g0 f1vx9l62 f14k419y f1fgo9fz fvqmfsm f3am6yf f1r5wgso frsmuga fuldkky f1eon7jj f1couhl3 f1e4n9qa fmr10b5 f7ew8k6 f1prrymk ftqa4ok f2hkw1w f8hki3x f1d2448m f1bjia2o ffh67wi f1j6vpng f1pniga2 f987i1v f1ffjurs f15bsgw9 f14e48fq f18yb2kv fd6o370 fpqizxz fnd8nzh f15fr7a0 fwsq40z f34ld9f fy0y4wt fbxl46w"
      role="group"
    >
      <h6
        class="fui-Text ___1xx6xg1_itqd0o0 fk6fouc fod5ikn faaz57k figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1hu3pq6 f19f4twv"
      >
        Errors
      </h6>
      <ul>
        <li>
          .marketType must be equal to one of the allowed values
        </li>
        <li>
          .commissioning must match format "year"
        </li>
        <li>
          .regions must NOT have fewer than 1 items
        </li>
        <li>
          .tier must be equal to one of the allowed values
        </li>
        <li>
          .active must be checked
        </li>
        <li>
          .notes must NOT have more than 10 characters
        </li>
        <li>
          .quantity must be an integer
        </li>
        <li>
          .threshold must be &lt;= 10
        </li>
        <li>
          .secret must NOT have fewer than 8 characters
        </li>
        <li>
          .shade must match format "color"
        </li>
        <li>
          .startsOn must match format "date"
        </li>
        <li>
          .startsAt must match format "date-time"
        </li>
        <li>
          .opensAt must match format "time"
        </li>
        <li>
          .endsOn must match format "date"
        </li>
        <li>
          .attachment must match format "data-url"
        </li>
      </ul>
    </div>
    <div
      class="rjsf-field rjsf-field-object"
    >
      <div
        class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
      >
        <div
          class="fui-Flex ___2axmsj0_qpg1ts0 f22iagw f1vx9l62 fly5x3f f1l02sjl f16r77es"
        >
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <div
                  class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                >
                  <label
                    class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                    for="field-_r_11___control"
                    id="field-_r_11___label"
                  >
                    marketType
                  </label>
                  <div
                    class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                  >
                    <button
                      aria-describedby="root_marketType__error root_marketType__description root_marketType__help"
                      aria-expanded="false"
                      aria-labelledby="field-_r_11___label"
                      class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                      id="root_marketType"
                      name="root_marketType"
                      role="combobox"
                      tabindex="0"
                      type="button"
                      value=""
                    >
                      <span
                        class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                      >
                        <svg
                          aria-hidden="true"
                          class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                          fill="currentColor"
                          height="1em"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      aria-label="Clear selection"
                      class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                        fill="currentColor"
                        height="1em"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_commissioning"
                >
                  commissioning
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_commissioning__error root_commissioning__description root_commissioning__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_commissioning"
                    name="root_commissioning"
                    placeholder=""
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="rjsf-field rjsf-field-array"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_regions"
                >
                  regions
                </label>
                <div
                  class="fui-Flex ___1ccp5kb_1s932w9 f22iagw f1vx9l62"
                >
                  <span
                    class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                  >
                    <input
                      aria-describedby="root_regions__error root_regions__description root_regions__help"
                      class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                      id="root_regions-0"
                      name="root_regions"
                      type="checkbox"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Checkbox__indicator rl7ci6d"
                    />
                    <label
                      class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_regions-0"
                    >
                      north
                    </label>
                  </span>
                  <span
                    class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                  >
                    <input
                      aria-describedby="root_regions__error root_regions__description root_regions__help"
                      class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                      id="root_regions-1"
                      name="root_regions"
                      type="checkbox"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Checkbox__indicator rl7ci6d"
                    />
                    <label
                      class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_regions-1"
                    >
                      south
                    </label>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_tier"
                >
                  tier
                </label>
                <div
                  aria-describedby="root_tier__error root_tier__description root_tier__help"
                  class="fui-RadioGroup ___1tjgnp0_1mgmpxf f22iagw f6jr5hl f1vx9l62"
                  id="root_tier"
                  role="radiogroup"
                >
                  <span
                    class="fui-Radio r1siqwd8"
                  >
                    <input
                      aria-describedby="root_tier__error root_tier__description root_tier__help"
                      class="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
                      id="root_tier-0"
                      name="root_tier"
                      type="radio"
                      value="0"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Radio__indicator rwtekvw"
                    />
                    <label
                      class="fui-Label fui-Radio__label ___pfgtpr0_5m9p670 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_tier-0"
                    >
                      gold
                    </label>
                  </span>
                  <span
                    class="fui-Radio r1siqwd8"
                  >
                    <input
                      aria-describedby="root_tier__error root_tier__description root_tier__help"
                      class="fui-Radio__input rg1upok ___183j3wl_1dim0pv f9ma1gx"
                      id="root_tier-1"
                      name="root_tier"
                      type="radio"
                      value="1"
                    />
                    <div
                      aria-hidden="true"
                      class="fui-Radio__indicator rwtekvw"
                    />
                    <label
                      class="fui-Label fui-Radio__label ___pfgtpr0_5m9p670 fk6fouc f19n0e5 fkhj508 f1i3iumi f7nlbp4 fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                      for="root_tier-1"
                    >
                      silver
                    </label>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-boolean"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <span
                  class="fui-Checkbox r1nzur1d ___1v6wcsu_941lme0 f3p8bqa fium13f f1r2dosr f1729es6"
                >
                  <input
                    aria-describedby="root_active__error root_active__description root_active__help"
                    class="fui-Checkbox__input ruo9svu ___qlal8r0_1xrlghj f1vgc2s3"
                    id="root_active"
                    name="root_active"
                    type="checkbox"
                  />
                  <div
                    aria-hidden="true"
                    class="fui-Checkbox__indicator rl7ci6d"
                  />
                  <label
                    class="fui-Label fui-Checkbox__label ___z217dr0_6ezprl0 fk6fouc f1ym3bx4 fkhj508 f1i3iumi f7nlbp4 fpo1scq fruq291 f1f5q0n8 fjzwpt6 fh6j2fo"
                    for="root_active"
                  >
                    active
                  </label>
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_notes"
                >
                  notes
                </label>
                <span
                  class="fui-Textarea ___ul6hw50_1iaxcbf ftuwxu6 f1ewtqcl f10pi13n f1yiegib f1s184ao ft85np5 f12kltsn fxugw4r f1c1zstj fhz96rm f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx fj2g8qd f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f1vnc8sk f3e99gv fhljsf7 f1l4zc64 f9mts5e f1z0osm6 f1acnei2 f1so894s f19ezbcq"
                >
                  <textarea
                    aria-describedby="root_notes__error root_notes__description root_notes__help"
                    class="fui-Textarea__textarea ___1exmw6r_wmtmdb0 f1ern45e f1n71otn f1h8hb77 f1deefiw f1s184ao f3rmtva f1ewtqcl f19n0e5 fqerorx fk6fouc f1l02sjl fwyc1cq f13ta7ih f1s6fcnf fvmd9f f1ww82xo f1if7ixc fkhj508 figsok6 f1i3iumi f1o1s39h"
                    id="root_notes"
                    name="root_notes"
                    placeholder=""
                    rows="5"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-number"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_quantity"
                >
                  quantity
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_quantity__error root_quantity__description root_quantity__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_quantity"
                    name="root_quantity"
                    placeholder=""
                    step="any"
                    type="number"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-number"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___1yevxz2_yljzsa0 fk6fouc f19n0e5 fkhj508 f1i3iumi"
                  for="root_threshold"
                >
                  threshold
                </label>
                <div
                  class="fui-Slider ___1rzzne9_mbaqyp0 f10pi13n fwk3njj f1sdsnyy f122n59 f1oiokrs ftqa4ok f2hkw1w f1b1k54r f4ne723 fh7aioi fqqcjud f1ufm4qn f1qnwcb4 fi52z01 fgrk5zm ffht0p2 f1p0ul1q f1c901ms f1alokd7 fmj8fco f1iwowo3 f1pffoy2 f1dfga45 fs6b7xr f63jj3o f1a78h9h fh1udnr fuok0yf f1nxs5xn fyvtabn fgfd48t f4t5rw1 f4l8x3l f671q34 fvfzmw5 faw1t00 fxdgx5 fii04fa f36hzz8 fdjsfay f1fen33d f1c6b0w1 f1rq9b4z f4xxiul"
                  style="--fui-Slider--direction: 90deg; --fui-Slider--progress: 0%;"
                >
                  <input
                    aria-describedby="root_threshold__error root_threshold__description root_threshold__help"
                    class="fui-Slider__input ___18m7y3e_m61uku0 f1k6fduh fk73vx1 f16hsg94 f1nzqi2z fwpfdsa fuur7zz f1mk8lai f1s184ao f1yfdkfd fly5x3f"
                    id="root_threshold"
                    max="10"
                    min="0"
                    name="root_threshold"
                    type="range"
                    value="0"
                  />
                  <div
                    class="fui-Slider__rail ___1t90fwv_uffdai0 f1kijzfu f1aehjj5 faunodf f88nxoq fd46tj4 f1e2fz10 f10pi13n fdgv6k0 fizngqt fpvhumw f1yog68k f13sgyd8 fzhtfnv f1j7ml58 fx36ao7 fddlh2i fly5x3f f1cy86ho f1heqfse fkh49vu f16tdq4e"
                  />
                  <div
                    class="fui-Slider__thumb ___1bqxrfv_t9dzsz0 ftx3jue faunodf f88nxoq fd46tj4 f1e2fz10 f1euv43f f174ca62 f1yfdkfd f1aehjj5 f1s6fcnf fdgv6k0 f44lkw9 fof7hq0 foksa45 f1j7ml58 f14u7mkt f5zrw40 fto0uou f1ks5ppg fielpny fyl8oag fzhtfnv f1fsco4d f13gfj74 foa2ioz"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_secret"
                >
                  secret
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_secret__error root_secret__description root_secret__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_secret"
                    name="root_secret"
                    placeholder=""
                    type="password"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_shade"
                >
                  shade
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_shade__error root_shade__description root_shade__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_shade"
                    name="root_shade"
                    placeholder=""
                    type="color"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_startsOn"
                >
                  startsOn
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_startsOn__error root_startsOn__description root_startsOn__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_startsOn"
                    name="root_startsOn"
                    placeholder=""
                    type="date"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_startsAt"
                >
                  startsAt
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_startsAt__error root_startsAt__description root_startsAt__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_startsAt"
                    name="root_startsAt"
                    placeholder=""
                    type="datetime-local"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <label
                  class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                  for="root_opensAt"
                >
                  opensAt
                </label>
                <span
                  class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                >
                  <input
                    aria-describedby="root_opensAt__error root_opensAt__description root_opensAt__help"
                    class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                    id="root_opensAt"
                    name="root_opensAt"
                    placeholder=""
                    type="time"
                    value=""
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <ul
                  class="list-inline"
                >
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_1n___control"
                        id="field-_r_1n___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_year__error root_endsOn_year__description root_endsOn_year__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_1n___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_year"
                          name="root_endsOn_year"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_1p___control"
                        id="field-_r_1p___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_month__error root_endsOn_month__description root_endsOn_month__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_1p___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_month"
                          name="root_endsOn_month"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <div
                      class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
                    >
                      <label
                        class="fui-Label fui-Field__label ___uxsood0_w9q9lw0 fk6fouc f19n0e5 fkhj508 f1i3iumi f6nezus f1iqmcbn fclwglc fywfov9 fyacil5"
                        for="field-_r_1r___control"
                        id="field-_r_1r___label"
                      />
                      <div
                        class="fui-Dropdown form-control ___11d5zms_mmbwks0 ft85np5 f1ewtqcl ftuwxu6 f1exfvgq f10pi13n fmrv4ls f14a1fxs f3e99gv fhljsf7 f1gw3sf2 f13zj6fq f1mdlcz9 f1a7op3 f1gboi2j f1cjjd47 ffyw7fx f1kp91vd f1ibwz09 f1mnjydx f13evtba f1yk9hq fhwpy7i f14ee0xe f1xhbsuh fsrmcvb f1t3k7v9 fjw5xc1 f1xdyd5c fatpbeo fb7uyps fx04xgm f1c7in40 f1ibeo51 f18qfb8s f1m082s7 fxugw4r f1c1zstj fhz96rm fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi fvs00aa f1assf6x f1z0osm6 f4ruux4 f1b473iu f381qr8 f1qzcrsd ft4skwv"
                      >
                        <button
                          aria-describedby="root_endsOn_day__error root_endsOn_day__description root_endsOn_day__help"
                          aria-expanded="false"
                          aria-labelledby="field-_r_1r___label"
                          class="fui-Dropdown__button ___12pyx89_1vewwra f122n59 f1c21dwh f3bhgqh f1ewtqcl f19n0e5 f14mj54c f1k6fduh f13qh94s fk6fouc f12nh0o2 f1869bpl f1o700av fly5x3f ftqa4ok fkhj508 figsok6 f1i3iumi f14ev680"
                          id="root_endsOn_day"
                          name="root_endsOn_day"
                          role="combobox"
                          tabindex="0"
                          type="button"
                          value=""
                        >
                          <span
                            class="fui-Dropdown__expandIcon ___5y6ahy0_3cm10l0 f1ewtqcl fxkbij4 ftgm304 fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          >
                            <svg
                              aria-hidden="true"
                              class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                              fill="currentColor"
                              height="1em"
                              viewBox="0 0 20 20"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                        <button
                          aria-label="Clear selection"
                          class="fui-Dropdown__clearButton rticfuj ___1ijk9xi_1ynmboo f1ewtqcl fxkbij4 fjseox fe5j1ua f12w6cgp f8bv1bt fvc9v3g f1h9en5y"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="fui-Icon ___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                            fill="currentColor"
                            height="1em"
                            viewBox="0 0 20 20"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <button
                      class="btn btn-info btn-now"
                      type="button"
                    >
                      Now
                    </button>
                  </li>
                  <li
                    class="list-inline-item"
                  >
                    <button
                      class="btn btn-warning btn-clear"
                      type="button"
                    >
                      Clear
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="fui-Flex ___13jx0ny_nlbnai0 f22iagw f1vx9l62 fly5x3f f1l02sjl"
            style="margin-bottom: 10px;"
          >
            <div
              class="___r7kt3y0_0000000 fqerorx rjsf-field rjsf-field-string"
            >
              <div
                class="fui-Field ___keyyzl0_1dbn5sh f13qh94s"
              >
                <div>
                  <label
                    class="fui-Label ___zkh2gz0_1ef3qts fk6fouc f19n0e5 fkhj508 f1i3iumi fq1loh5 futqtb8 f14rdt9"
                    for="root_attachment"
                  >
                    attachment
                  </label>
                  <span
                    class="fui-Input r1oeeo9n ___1v9icnz_137yv9i fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
                  >
                    <input
                      aria-describedby="root_attachment__error root_attachment__description root_attachment__help"
                      class="fui-Input__input r12stul0 ___cqaz2i0_9xw1o20 fly5x3f"
                      id="root_attachment"
                      name="root_attachment"
                      placeholder=""
                      type="file"
                      value=""
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="___fko12g0_0000000 f1wswflg"
    >
      <button
        class="fui-Button r1f29ykk ___dhqv000_ql4wmo0 ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc f1ksv2xa fhvnf4x fb6swo4 f1klyf7k f232fm2 f1d6mv4x f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx f1ysmecq faulsx f79t15f fbtzoaq f8qmx7k fd4bjan f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</DocumentFragment>
`;
